# ruff-legibility

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  ruff-legibility.toml  setup.sh  test_setup.sh
.agents/skills/ruff-legibility/: SKILL.md
.agents/skills/ruff-legibility/agents/: openai.yaml
.claude/rules/: ruff-legibility.md
.codex/rules/: ruff-legibility.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  scorecard.yml
examples/: rules.diff
src/native/: lib.rs
src/ruff_legibility/: __init__.py  cli.py  config.py  core.py  native.py  noqa.py  rules.py  skill_installer.py
src/ruff_legibility/agent_skills/: __init__.py  constants.py  installer.py  schema.py
src/ruff_legibility/skills/ruff-legibility/: SKILL.md
src/ruff_legibility/skills/ruff-legibility/agents/: openai.yaml
tests/: test_cli.py  test_config.py  test_rules.py  test_skill_installer.py
