[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruff-legibility"
version = "0.1.0"
description = "Ruff-adjacent Python legibility rules for readable, reviewable code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeffry Wainwright" }]
keywords = ["ruff", "lint", "legibility", "readability", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/yowainwright/ruff-legibility"
Issues = "https://github.com/yowainwright/ruff-legibility/issues"
Repository = "https://github.com/yowainwright/ruff-legibility"

[project.scripts]
ruff-legibility = "ruff_legibility.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ruff_legibility"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml", "ruff-legibility.toml"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
