[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "ruff-legibility"
version = "0.3.1"
description = "Ruff-adjacent Python legibility rules for readable, reviewable code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeffry Wainwright" }]
keywords = ["ruff", "lint", "legibility", "readability", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/yowainwright/ruff-legibility"
Issues = "https://github.com/yowainwright/ruff-legibility/issues"
Repository = "https://github.com/yowainwright/ruff-legibility"

[project.scripts]
ruff-legibility = "ruff_legibility.cli:main"

[tool.maturin]
python-source = "src"
module-name = "ruff_legibility._native"
bindings = "pyo3"
features = ["pyo3/abi3-py311", "pyo3/extension-module"]
include = [
  "examples/**/*",
  "tests/**/*",
  "ruff-legibility.toml",
  "src/ruff_legibility/skills/**/*",
]
exclude = ["**/__pycache__/**/*", "**/*.pyc"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
